@@ -15,4 +15,4 @@ Automake.am and configure.ac are the two files which are hand edited.
 License
 -------
 GNU Lesser General Public License (LGPL), version 3 or later.
-See COPYING, misc/lgpl-3.0.txt, and misc/gpl-3.0.txt for details.
+See COPYING, COPYING.GPL3 for details.
